--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <guava.version>31.1-jre</guava.version>
         <lombok.version>1.18.26</lombok.version>
         <log4j2.version>2.20.0</log4j2.version>
+        <commons-lang3.version>3.1</commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -74,6 +75,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
