--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,14 @@
         <lombok.version>1.18.26</lombok.version>
         <log4j2.version>2.20.0</log4j2.version>
         <commons-lang3.version>3.1</commons-lang3.version>
+        <gson.version>2.10.1</gson.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -75,6 +76,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
